# unity-rtsp-streamer

./: .gitmodules  LICENSE  README.md
Assets/: CameraRT.renderTexture  RtspStreamer.unity
Assets/Scripts/: MoveCube.cs  RtspStreamer.cs
ProjectSettings/: ProjectSettings.asset
RtspLib/: .gitignore  CMakeLists.txt  README.md  rtsp_streamer.cpp  rtsp_streamer.h
RtspLib/src/: CMakeLists.txt  rtsp_streamer.cpp  rtsp_streamer.h  type.h
RtspLib/test/: CMakeLists.txt  main.cpp
RtspLib/wrapper/: CMakeLists.txt  wrapper.cpp  wrapper.h
RtspStreamer_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets
RtspStreamer_Data/Resources/: unity_builtin_extra
